# kmp-3d-model-viewer

./: AGENTS.md  README.md  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/lt/smworks/multiplatform3dengine/: Controls.kt  MainActivity.kt  MainViewModel.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/lt/smworks/multiplatform3dengine/: App.kt
composeApp/src/commonTest/kotlin/lt/smworks/multiplatform3dengine/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/lt/smworks/multiplatform3dengine/: MainViewController.kt
composeApp/src/jvmMain/kotlin/lt/smworks/multiplatform3dengine/: main.kt
composeApp/src/webMain/kotlin/lt/smworks/multiplatform3dengine/: main.kt
composeApp/src/webMain/resources/: index.html
engine/: build.gradle.kts
engine/src/androidMain/assets/shaders/: triangle.frag.spv  triangle.vert.spv
engine/src/androidMain/cpp/: CMakeLists.txt
engine/src/androidMain/cpp/shaders/: triangle.frag  triangle.vert
engine/src/androidMain/cpp/src/: Camera.cpp  Camera.h  ImageLoader.cpp  ImageLoader.h  Model.h  ModelLoader.cpp  ModelLoader.h  TeapotData.h  VulkanBuilder.cpp  VulkanBuilder.h  vkrenderer.cpp  vkrenderer.h
engine/src/androidMain/kotlin/lt/smworks/multiplatform3dengine/: Platform.android.kt
engine/src/androidMain/kotlin/lt/smworks/multiplatform3dengine/vulkan/: EngineAPI.kt  VulkanNativeRenderer.kt  VulkanScreen.android.kt  VulkanSupport.kt
engine/src/commonMain/kotlin/lt/smworks/multiplatform3dengine/: Greeting.kt  Platform.kt
engine/src/commonMain/kotlin/lt/smworks/multiplatform3dengine/vulkan/: EngineAPI.kt  EngineSceneSpec.kt  Scene.kt  VulkanScreen.kt
engine/src/iosMain/kotlin/lt/smworks/multiplatform3dengine/: Platform.ios.kt
engine/src/iosMain/kotlin/lt/smworks/multiplatform3dengine/vulkan/: EngineAPI.kt  VulkanScreen.ios.kt
engine/src/jsMain/kotlin/lt/smworks/multiplatform3dengine/: Platform.js.kt
engine/src/jsMain/kotlin/lt/smworks/multiplatform3dengine/vulkan/: VulkanScreen.js.kt
engine/src/jvmMain/kotlin/lt/smworks/multiplatform3dengine/: Platform.jvm.kt
engine/src/jvmMain/kotlin/lt/smworks/multiplatform3dengine/vulkan/: VulkanScreen.jvm.kt
engine/src/wasmJsMain/kotlin/lt/smworks/multiplatform3dengine/: Platform.wasmJs.kt
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+1 files in other folders)
